Completed the README

--- a/notebooks/analyze-ratings.ipynb
+++ b/notebooks/analyze-ratings.ipynb
@@ -1330,7 +1330,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 61,
+   "execution_count": 62,
    "metadata": {},
    "outputs": [
     {
@@ -1343,139 +1343,106 @@
         {
          "customdata": [
           [
-           "4231 E. Hwy 332 Freeport, Texas 77541",
-           "https://www.google.com/maps/search/4231 E. Hwy 332+Freeport+Texas+77541"
+           "4231 E. Hwy 332 Freeport, Texas 77541"
           ],
           [
-           "598 Hwy 332 Lake Jackson, Texas 77566",
-           "https://www.google.com/maps/search/598 Hwy 332+Lake Jackson+Texas+77566"
+           "598 Hwy 332 Lake Jackson, Texas 77566"
           ],
           [
-           "1243 Crabb River Rd Richmond, Texas 77469",
-           "https://www.google.com/maps/search/1243 Crabb River Rd+Richmond+Texas+77469"
+           "1243 Crabb River Rd Richmond, Texas 77469"
           ],
           [
-           "2318 W Main Port Lavaca, Texas 77979",
-           "https://www.google.com/maps/search/2318 W Main+Port Lavaca+Texas+77979"
+           "2318 W Main Port Lavaca, Texas 77979"
           ],
           [
-           "2375 E Austin St Giddings, Texas 78942",
-           "https://www.google.com/maps/search/2375 E Austin St+Giddings+Texas+78942"
+           "2375 E Austin St Giddings, Texas 78942"
           ],
           [
-           "2304 W Mulberry St Angleton, Texas 77515",
-           "https://www.google.com/maps/search/2304 W Mulberry St+Angleton+Texas+77515"
+           "2304 W Mulberry St Angleton, Texas 77515"
           ],
           [
-           "20403 County Rd. 68 Robertsdale, Alabama 36567",
-           "https://www.google.com/maps/search/20403 County Rd. 68+Robertsdale+Alabama+36567"
+           "20403 County Rd. 68 Robertsdale, Alabama 36567"
           ],
           [
-           "1702 League City Pkwy League City, Texas 77573",
-           "https://www.google.com/maps/search/1702 League City Pkwy+League City+Texas+77573"
+           "1702 League City Pkwy League City, Texas 77573"
           ],
           [
-           "205 IH-45 South Madisonville, Texas 77864",
-           "https://www.google.com/maps/search/205 IH-45 South+Madisonville+Texas+77864"
+           "205 IH-45 South Madisonville, Texas 77864"
           ],
           [
-           "27106 US-290 Cypress, Texas 77433",
-           "https://www.google.com/maps/search/27106 US-290+Cypress+Texas+77433"
+           "27106 US-290 Cypress, Texas 77433"
           ],
           [
-           "27700 Katy Fwy Katy, Texas 77494",
-           "https://www.google.com/maps/search/27700 Katy Fwy+Katy+Texas+77494"
+           "27700 Katy Fwy Katy, Texas 77494"
           ],
           [
-           "10070 West IH 10 Luling, Texas 78658",
-           "https://www.google.com/maps/search/10070 West IH 10+Luling+Texas+78658"
+           "10070 West IH 10 Luling, Texas 78658"
           ],
           [
-           "4080 East Freeway Baytown, Texas 77521",
-           "https://www.google.com/maps/search/4080 East Freeway+Baytown+Texas+77521"
+           "4080 East Freeway Baytown, Texas 77521"
           ],
           [
-           "1700 Highway 71 East Bastrop, Texas 78602",
-           "https://www.google.com/maps/search/1700 Highway 71 East+Bastrop+Texas+78602"
+           "1700 Highway 71 East Bastrop, Texas 78602"
           ],
           [
-           "10484 US 59 Road Wharton, Texas 77488",
-           "https://www.google.com/maps/search/10484 US 59 Road+Wharton+Texas+77488"
+           "10484 US 59 Road Wharton, Texas 77488"
           ],
           [
-           "40900 US Hwy 290 Bypass Waller, Texas 77484",
-           "https://www.google.com/maps/search/40900 US Hwy 290 Bypass+Waller+Texas+77484"
+           "40900 US Hwy 290 Bypass Waller, Texas 77484"
           ],
           [
-           "5005 E Interstate 30 Royse City, Texas 75189",
-           "https://www.google.com/maps/search/5005 E Interstate 30+Royse City+Texas+75189"
+           "5005 E Interstate 30 Royse City, Texas 75189"
           ],
           [
-           "4155 N General Bruce Dr. Temple, Texas 76501",
-           "https://www.google.com/maps/search/4155 N General Bruce Dr.+Temple+Texas+76501"
+           "4155 N General Bruce Dr. Temple, Texas 76501"
           ],
           [
-           "15901 N Freeway Fort Worth, Texas 76177",
-           "https://www.google.com/maps/search/15901 N Freeway+Fort Worth+Texas+76177"
+           "15901 N Freeway Fort Worth, Texas 76177"
           ],
           [
-           "2800 S Interstate 35 E Denton, Texas 76210",
-           "https://www.google.com/maps/search/2800 S Interstate 35 E+Denton+Texas+76210"
+           "2800 S Interstate 35 E Denton, Texas 76210"
           ],
           [
-           "601 Union Grove Rd. SE Adairsville, GA 30103",
-           "https://www.google.com/maps/search/601 Union Grove Rd. SE+Adairsville+GA+30103"
+           "601 Union Grove Rd. SE Adairsville, GA 30103"
           ],
           [
-           "506 W. IH 20 Terrell, Texas 75160",
-           "https://www.google.com/maps/search/506 W. IH 20+Terrell+Texas+75160"
+           "506 W. IH 20 Terrell, Texas 75160"
           ],
           [
-           "7001 Russell Parkway Fort Valley, Georgia 31030",
-           "https://www.google.com/maps/search/7001 Russell Parkway+Fort Valley+Georgia+31030"
+           "7001 Russell Parkway Fort Valley, Georgia 31030"
           ],
           [
-           "2045 Genesis Road Crossville, Tennessee 38555",
-           "https://www.google.com/maps/search/2045 Genesis Road+Crossville+Tennessee+38555"
+           "2045 Genesis Road Crossville, Tennessee 38555"
           ],
           [
-           "3390 North Williston Road Florence, South Carolina 29506",
-           "https://www.google.com/maps/search/3390 North Williston Road+Florence+South Carolina+29506"
+           "3390 North Williston Road Florence, South Carolina 29506"
           ],
           [
-           "2330 Gateway North Drive Daytona Beach, FL 32117",
-           "https://www.google.com/maps/search/2330 Gateway North Drive+Daytona Beach+FL+32117"
+           "2330 Gateway North Drive Daytona Beach, FL 32117"
           ],
           [
-           "200 World Commerce Pkwy Saint Augustine, Florida 32092",
-           "https://www.google.com/maps/search/200 World Commerce Pkwy+Saint Augustine+Florida+32092"
+           "200 World Commerce Pkwy Saint Augustine, Florida 32092"
           ],
           [
-           "6201 Gulf Fwy (IH 45) Texas City, Texas 77591",
-           "https://www.google.com/maps/search/6201 Gulf Fwy (IH 45)+Texas City+Texas+77591"
+           "6201 Gulf Fwy (IH 45) Texas City, Texas 77591"
           ],
           [
-           "2760 IH 35 North New Braunfels, Texas 78130",
-           "https://www.google.com/maps/search/2760 IH 35 North+New Braunfels+Texas+78130"
+           "2760 IH 35 North New Braunfels, Texas 78130"
           ],
           [
-           "6900 Buc-ee’s Blvd. Leeds, Alabama 35094",
-           "https://www.google.com/maps/search/6900 Buc-ee’s Blvd.+Leeds+Alabama+35094"
+           "6900 Buc-ee’s Blvd. Leeds, Alabama 35094"
           ],
           [
-           "1013 Buc-ee's Boulevard Richmond, Kentucky 40475",
-           "https://www.google.com/maps/search/1013 Buc-ee's Boulevard+Richmond+Kentucky+40475"
+           "1013 Buc-ee's Boulevard Richmond, Kentucky 40475"
           ],
           [
-           "11151 Shadow Creek Pky Pearland, Texas 77584",
-           "https://www.google.com/maps/search/11151 Shadow Creek Pky+Pearland+Texas+77584"
+           "11151 Shadow Creek Pky Pearland, Texas 77584"
           ],
           [
-           "1550 Central Texas Expressway Melissa, Texas 75454",
-           "https://www.google.com/maps/search/1550 Central Texas Expressway+Melissa+Texas+75454"
+           "1550 Central Texas Expressway Melissa, Texas 75454"
           ]
          ],
-         "hovertemplate": "<b>%{hovertext}</b><br><br>total_ratings=%{x}<br>rating=%{y}<br>address=%{customdata[0]}<br>google_maps_url=%{customdata[1]}<extra></extra>",
+         "hovertemplate": "<b>%{hovertext}</b><br><br>total_ratings=%{x}<br>rating=%{y}<br>address=%{customdata[0]}<extra></extra>",
          "hovertext": [
           "#7 – Freeport, TX",
           "#29 – Lake Jackson, TX",
